[metadata]
name = eventparser
version = 0.5.4.2
url = https://github.com/unimap/scripts/tree/master/event-parser
description = event parser of kyoto-univ
long_description = file: README.md
project = kyodaimap
author = kkiyama117
author_email = k.kiyama117@gmail.com
maintainer = Unimap, Inc.
maintainer_email = info@unimap.co.jp
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Environment :: Console
    Natural Language :: English
    Natural Language :: Japanese
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Utilities

[options]
include_package_data = True
setup_requires=
    setuptools >= 30.3
    sphinx
install_requires =
    sphinx
    beautifulsoup4
    lxml
    pytz
    requests
tests_require =
    pytest
packages = find:
py_modules = main
entry_points = file: entry_points.cfg
extra_files =
    README.md
python_requires =
    >=2.7
    !=3.0
    !=3.1
    !=3.2
    !=3.3
test_suite='tests'

[options.extras_require]
test=
    pytest
build_sphinx=
    sphinx
    sphinx-rtd-theme

[tool:pytest]
addopts = -v --pdb --durations=100
python_files = test_*.py

[build_sphinx]
project = 'event-parser'
version = 0.5
release = 0.5.4beta
source-dir = docs/source
build-dir  = build/sphinx
all_files  = 1
